force-app/main/default/objects/Implementation_Services__c/fields/Phase_2_Pause_Days__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_Pause_Days__c</fullName>
    <label>Phase 2 (Build) Pause Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>