force-app/main/default/objects/Implementation_Services__c/fields/Phase_2_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_Start_Date__c</fullName>
    <label>Phase 2 (Build) Start Date</label>
    <type>Date</type>
</CustomField>