force-app/main/default/objects/Implementation_Services__c/fields/Phase_3_Color__c.field-meta.xml
<CustomField>
    <fullName>Phase_3_Color__c</fullName>
    <formula>IF(Date_of_Stage_On_Hold__c &lt;&gt; null || Phase_3_Start_Date__c = null,  IMAGE(&quot;/servlet/servlet.FileDownload?file=0151B000002xQT9&quot;, &quot;Grey&quot;), 
IF(Phase_3_Days_Left__c &lt; 7, IMAGE(&quot;/servlet/servlet.FileDownload?file=0151B000002xQTB&quot;, &quot;Red&quot;), 
IF(Phase_3_Days_Left__c &gt; 14, IMAGE(&quot;/servlet/servlet.FileDownload?file=0151B000002xQT8&quot;, &quot;Green&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0151B000002xQTA&quot;, &quot;Yellow&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase 3 (Train) Color</label>
    <type>Text</type>
</CustomField>