force-app/main/default/objects/Implementation_Services__c/fields/Phase_3_Days_Left__c.field-meta.xml
<CustomField>
    <fullName>Phase_3_Days_Left__c</fullName>
    <formula>IF(Phase_3_Pause_Date__c &lt;&gt; null, Phase_3_Pause_Date__c, Phase_3_End_Date__c) - Phase_3_Start_Date__c + Phase_3_Pause_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase 3 (Train) Days Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>