force-app/main/default/objects/Implementation_Services__c/fields/Phase_3_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_3_End_Date__c</fullName>
    <label>Phase 3 (Train) End Date</label>
    <type>Date</type>
</CustomField>