force-app/main/default/objects/Implementation_Services__c/fields/Phase_3_Pause_Days__c.field-meta.xml
<CustomField>
    <fullName>Phase_3_Pause_Days__c</fullName>
    <label>Phase 3 (Train) Pause Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>