force-app/main/default/objects/Implementation_Services__c/fields/Pilot_Team_Date__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Team_Date__c</fullName>
    <description>This is based on the FlightReady type and populated bu the IC</description>
    <label>Pilot Team Date</label>
    <type>Date</type>
</CustomField>