force-app/main/default/objects/Implementation_Services__c/fields/Pre_Contract_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Pre_Contract_Timestamp__c</fullName>
    <label>Pre Contract Timestamp</label>
    <type>DateTime</type>
</CustomField>