force-app/main/default/objects/Implementation_Services__c/fields/Project_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Project_Accepted__c</fullName>
    <description>This is the date field for when implementations has officially accepted the project. Should correspond with Project Accepted Milestone in Taskray.</description>
    <inlineHelpText>This is the date field for when implementations has officially accepted the project.  Should correspond with Project Accepted Milestone in Taskray.</inlineHelpText>
    <label>Project Accepted</label>
    <type>Date</type>
</CustomField>