force-app/main/default/objects/Implementation_Services__c/fields/Promo_SOTS_Codes_applied_for_Admin__c.field-meta.xml
<CustomField>
    <fullName>Promo_SOTS_Codes_applied_for_Admin__c</fullName>
    <label>Promo/SOTS Codes applied for Admin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>