force-app/main/default/objects/Implementation_Services__c/fields/Promo_SOTS_Codes_applied_for_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Promo_SOTS_Codes_applied_for_Bill_To__c</fullName>
    <label>Promo/SOTS Codes applied for Bill To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>