force-app/main/default/objects/Implementation_Services__c/fields/Public_Training_Session__c.field-meta.xml
<CustomField>
    <fullName>Public_Training_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Training Session</label>
    <type>Checkbox</type>
</CustomField>