force-app/main/default/objects/Implementation_Services__c/fields/Related_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Type__c</fullName>
    <formula>Text(Related_Opportunity__r.Account.Type)</formula>
    <label>Related Account Type</label>
    <type>Text</type>
</CustomField>