force-app/main/default/objects/Implementation_Services__c/fields/Related_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_Name__c</fullName>
    <formula>Related_Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Opportunity Name</label>
    <type>Text</type>
</CustomField>