force-app/main/default/objects/Implementation_Services__c/fields/Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Engineer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select a user with channel Sales Engineers.  Please submit a case if you cannot find the person you are searching for.</errorMessage>
        <filterItems>
            <field>User.Channel__c</field>
            <operation>equals</operation>
            <value>Sales Engineers, ECS SE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Implementation_Services2</relationshipName>
    <type>Lookup</type>
</CustomField>