force-app/main/default/objects/Implementation_Services__c/fields/Start_Nurture__c.field-meta.xml
<CustomField>
    <fullName>Start_Nurture__c</fullName>
    <label>Start Nurture</label>
    <type>Date</type>
</CustomField>