force-app/main/default/objects/Implementation_Services__c/fields/Summary_of_Requested_Work__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Requested_Work__c</fullName>
    <label>Summary of Requested Work</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>