force-app/main/default/objects/Implementation_Services__c/fields/Time_to_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Equipment__c</fullName>
    <description>Number of days it took the equipment to arrive at prem after project was accepted.</description>
    <formula>EquipmentArrived__c - Project_Accepted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days it took the equipment to arrive at prem after project was accepted.</inlineHelpText>
    <label>Time to Equipment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>