force-app/main/default/objects/Implementation_Services__c/fields/Top_10_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Top_10_Contract_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top 10 Contract Signed</label>
    <type>Checkbox</type>
</CustomField>