force-app/main/default/objects/Implementation_Services__c/fields/Top_10_Pre_Contract__c.field-meta.xml
<CustomField>
    <fullName>Top_10_Pre_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top 10 Pre-Contract</label>
    <type>Checkbox</type>
</CustomField>