force-app/main/default/objects/Implementation_Services__c/fields/Total_of_Days_on_Hold__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Days_on_Hold__c</fullName>
    <label>Total # of Days on Hold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>