force-app/main/default/objects/Implementation_Services__c/fields/Training_Customized_Required__c.field-meta.xml
<CustomField>
    <fullName>Training_Customized_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field indicates if customer needs a customized training session. Field generates need in report.</description>
    <label>Training - Customized Required</label>
    <type>Checkbox</type>
</CustomField>