force-app/main/default/objects/Implementation_Services__c/fields/Training_Offered__c.field-meta.xml
<CustomField>
    <fullName>Training_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field captures whether or not training was offered to the customer.</description>
    <label>Training - Offered</label>
    <type>Checkbox</type>
</CustomField>