force-app/main/default/objects/Implementation_Services__c/fields/Training_Specialist_Assigned_2__c.field-meta.xml
<CustomField>
    <fullName>Training_Specialist_Assigned_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Specialist Assigned</label>
    <type>Checkbox</type>
</CustomField>