force-app/main/default/objects/Implementation_Services__c/fields/Training_Specialist_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Training_Specialist_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the User object to select the Training Specialist</inlineHelpText>
    <label>Training Specialist Assigned</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This user isnt part of the IST Team</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>PGi Implementation Services</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Implementation_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>