force-app/main/default/objects/Implementation_Services__c/fields/TS1_Build_Status_UnSelected__c.field-meta.xml
<CustomField>
    <fullName>TS1_Build_Status_UnSelected__c</fullName>
    <description>Timestamp tracking when Build Status has been unselected</description>
    <label>TS1_Build Status_UnSelected</label>
    <type>DateTime</type>
</CustomField>