force-app/main/default/objects/Implementation_Services__c/fields/TS3_Train_Status_Unselected__c.field-meta.xml
<CustomField>
    <fullName>TS3_Train_Status_Unselected__c</fullName>
    <description>Timestamp tracking when Train Status has been set</description>
    <label>TS3_Train Status Unselected</label>
    <type>DateTime</type>
</CustomField>