force-app/main/default/objects/Implementation_Services__c/fields/TS8_Bill_Review_Status_Set__c.field-meta.xml
<CustomField>
    <fullName>TS8_Bill_Review_Status_Set__c</fullName>
    <inlineHelpText>Timestamp tracking when Bill Review Status has been set</inlineHelpText>
    <label>TS8_Bill Review Status_Set</label>
    <type>DateTime</type>
</CustomField>