force-app/main/default/objects/Implementation_Services__c/fields/TS8_Bill_Review_Status_Unselected__c.field-meta.xml
<CustomField>
    <fullName>TS8_Bill_Review_Status_Unselected__c</fullName>
    <description>Timestamp tracking when Bill Review Status has been set</description>
    <label>TS8_Bill Review Status Unselected</label>
    <type>DateTime</type>
</CustomField>