force-app/main/default/objects/Implementation_Services__c/fields/TS_Discover_Status_Unselected__c.field-meta.xml
<CustomField>
    <fullName>TS_Discover_Status_Unselected__c</fullName>
    <description>Timestamp tracking when Discovery Status has been set</description>
    <label>TS_Discovery Status Unselected</label>
    <type>DateTime</type>
</CustomField>