force-app/main/default/objects/Implementation_Services__c/fields/TS_Hand_off_Status_Unselected__c.field-meta.xml
<CustomField>
    <fullName>TS_Hand_off_Status_Unselected__c</fullName>
    <description>Timestamp tracking when Hand-off Status has been set</description>
    <label>TS_Hand-off Status Unselected</label>
    <type>DateTime</type>
</CustomField>