force-app/main/default/objects/Implementation_Services__c/fields/TS_On_Hold_Unselected__c.field-meta.xml
<CustomField>
    <fullName>TS_On_Hold_Unselected__c</fullName>
    <description>Timestamp tracking when On Hold Status has been unselected</description>
    <label>TS_On Hold Unselected</label>
    <type>DateTime</type>
</CustomField>