force-app/main/default/objects/Implementation_Services__c/fields/TS_Plan_Status_Set__c.field-meta.xml
<CustomField>
    <fullName>TS_Plan_Status_Set__c</fullName>
    <description>Timestamp tracking when Plan Status has been set</description>
    <label>TS_Plan Status_Set</label>
    <type>DateTime</type>
</CustomField>