force-app/main/default/objects/Implementation_Services__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Plan</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Client Connection</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>First Class</fullName>
            </value>
            <value>
                <fullName>In-Product Survey Follow-Up</fullName>
            </value>
            <value>
                <fullName>Lite</fullName>
            </value>
            <value>
                <fullName>NPS Survey Follow Up</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>SuccessStart</fullName>
            </value>
            <value>
                <fullName>Zendesk Tickets</fullName>
            </value>
            <value>
                <fullName>Base Account - Renewal</fullName>
            </value>
            <value>
                <fullName>Base Account - Upsell</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>