force-app/main/default/objects/Implementation_Services__c/fields/Upsell_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Opportunities__c</fullName>
    <description>To be completed when switching status to &quot;launched&quot;</description>
    <label>Upsell Opportunities</label>
    <type>TextArea</type>
</CustomField>