force-app/main/default/objects/Implementation_Services__c/fields/Wallet_Cards__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Cards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wallet Cards</label>
    <type>Checkbox</type>
</CustomField>