force-app/main/default/objects/Implementation_Services__c/fields/Welcome_Email__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Email</label>
    <type>Checkbox</type>
</CustomField>