force-app/main/default/objects/Implementation_Services__c/recordTypes/iMC_IST.recordType-meta.xml
<RecordType>
    <fullName>iMC_IST</fullName>
    <active>true</active>
    <label>iMC IST</label>
</RecordType>