force-app/main/default/objects/Implementation_Services__c/recordTypes/PGi_IST.recordType-meta.xml
<RecordType>
    <fullName>PGi_IST</fullName>
    <active>true</active>
    <label>PGi IST</label>
</RecordType>