force-app/main/default/objects/Implementation_Services__c/validationRules/Cancelled_Notes_Required_If_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Notes_Required_If_Cancelled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(IST_Completed_Status__c, &quot;Cancelled&quot;),
ISBLANK(Cancelled_Notes__c)
)</errorConditionFormula>
    <errorMessage>Cancelled Notes are required if cancelled.</errorMessage>
</ValidationRule>