force-app/main/default/objects/Implementation_Services__c/validationRules/Cannot_chg_Top10_Mgr_Notes_Unless_Mgr.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_chg_Top10_Mgr_Notes_Unless_Mgr</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.Id &lt;&gt; &apos;0053000000620A0&apos;,
$User.Id &lt;&gt; &apos;005a0000009WIUc&apos;,
$User.Id &lt;&gt; &apos;005300000065o6P&apos;,
$User.Id &lt;&gt; &apos;00530000007dKU2&apos;,
OR(
ISCHANGED(Manager_Only_Notes__c)
)
)</errorConditionFormula>
    <errorMessage>You do not have permission to modify the following fields:  Top 10 Contract Signed, Top 10 Pre Contract, Manager Only Notes.</errorMessage>
</ValidationRule>