force-app/main/default/objects/Implementation_Services__c/validationRules/EMEA_VAT_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_VAT_Required</fullName>
    <active>true</active>
    <description>A Company VAT Number is required of Company Region = EMEA</description>
    <errorConditionFormula>AND(
ISBLANK(Company_VAT_Number__c),
ISPICKVAL( NCS_Company_Region__c , &apos;EMEA&apos;)
)</errorConditionFormula>
    <errorMessage>A Company VAT Number is required for EMEA based customers</errorMessage>
</ValidationRule>