force-app/main/default/objects/Implementation_Services__c/validationRules/IST_First_Bill_Month_Year_and_Bill_Total.validationRule-meta.xml
<ValidationRule>
    <fullName>IST_First_Bill_Month_Year_and_Bill_Total</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL(IST_Completed_Status__c, &quot;Completed&quot;), 
ISBLANK(First_Bill_Month_Year__c)|| 
ISBLANK(First_Bill_Total_Amount__c) 
)</errorConditionFormula>
    <errorDisplayField>First_Bill_Month_Year__c</errorDisplayField>
    <errorMessage>The &quot;First Bill Month/Year&quot; and &quot;First Bill Total Amount&quot; fields are required if attempting to complete the IST record.</errorMessage>
</ValidationRule>