force-app/main/default/objects/Implementation_Services__c/validationRules/IST_Hand_Off_Required_when_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>IST_Hand_Off_Required_when_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL(IST_Completed_Status__c , &quot;Completed&quot;), 
Hand_off_Completed__c = FALSE 
)</errorConditionFormula>
    <errorDisplayField>Hand_off_Completed__c</errorDisplayField>
    <errorMessage>The Hand-Off Completed Checkbox must be selected when setting the Implementation Stage to &quot;Completed&quot;.</errorMessage>
</ValidationRule>