force-app/main/default/objects/Implementation_Services__c/validationRules/IST_Require_On_Hold_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>IST_Require_On_Hold_Notes</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Implementation_Stage__c) = &apos;On Hold&apos; &amp;&amp; On_Hold_Notes__c = &apos;&apos;</errorConditionFormula>
    <errorDisplayField>On_Hold_Notes__c</errorDisplayField>
    <errorMessage>On Hold Notes are required if the Implementation Stage is On Hold.</errorMessage>
</ValidationRule>