force-app/main/default/objects/Implementation_Services__c/listViews/All_Completed_Implementations1.listView-meta.xml
<ListView>
    <fullName>All_Completed_Implementations1</fullName>
    <columns>NAME</columns>
    <columns>IST_Status__c</columns>
    <columns>Related_Account__c</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>Implementation_Owner__c</columns>
    <columns>Bill_Review_Completed__c</columns>
    <columns>Hand_off_Completed__c</columns>
    <columns>Training_Specialist_Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IST_Completed_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Owner_Region__c</field>
        <operation>equals</operation>
        <value>NA</value>
    </filters>
    <label>All Completed Implementations</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>