force-app/main/default/objects/Implementation_Services__c/listViews/ALL_Open_iMC_IST.listView-meta.xml
<ListView>
    <fullName>ALL_Open_iMC_IST</fullName>
    <booleanFilter>(1 and 2) or (1 and 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Launch_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Type__c</columns>
    <columns>Implementation_Owner__c</columns>
    <columns>Hours_Allotted__c</columns>
    <columns>Hours_Completed__c</columns>
    <columns>Account__c</columns>
    <columns>iMC_Contact_Link__c</columns>
    <columns>IST_Completed_Status__c</columns>
    <columns>IST_Status__c</columns>
    <columns>iMC_Record_Status__c</columns>
    <columns>Business_Level__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Implementation_Services__c.iMC_IST</value>
    </filters>
    <filters>
        <field>iMC_Record_Status__c</field>
        <operation>notContain</operation>
        <value>close</value>
    </filters>
    <filters>
        <field>IST_Completed_Status__c</field>
        <operation>notContain</operation>
        <value>Open,No IS Assigned,Nuture,Disengaged,On-Track,Off-Track,Standby,Unrespon</value>
    </filters>
    <label>ALL Open iMC IST</label>
    <language>en_US</language>
</ListView>