force-app/main/default/objects/Implementation_Services__c/listViews/All_Open_Implementations.listView-meta.xml
<ListView>
    <fullName>All_Open_Implementations</fullName>
    <columns>NAME</columns>
    <columns>Technical_Specialist__c</columns>
    <columns>Pre_Implementation_Survey__c</columns>
    <columns>Implementation_Owner__c</columns>
    <columns>Related_Account__c</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>IST_Status__c</columns>
    <columns>Sales_Engineer__c</columns>
    <columns>Training_Specialist_Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IST_Completed_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Owner_Region__c</field>
        <operation>equals</operation>
        <value>NA</value>
    </filters>
    <filters>
        <field>Technical_Specialist__c</field>
        <operation>contains</operation>
        <value>mitchell,garko,stegenga,sienko</value>
    </filters>
    <label>NA Tech Engineer Assignments</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>