force-app/main/default/objects/Implementation_Services__c/listViews/All_Open_Implementations1.listView-meta.xml
<ListView>
    <fullName>All_Open_Implementations1</fullName>
    <columns>NAME</columns>
    <columns>Implementation_Owner__c</columns>
    <columns>Related_Account__c</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>IST_Status__c</columns>
    <columns>Training_Specialist_Assigned__c</columns>
    <columns>Bill_Review_Completed__c</columns>
    <columns>Hand_off_Completed__c</columns>
    <columns>Implementation_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IST_Completed_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Owner_Region__c</field>
        <operation>equals</operation>
        <value>NA</value>
    </filters>
    <filters>
        <field>Implementation_Owner__c</field>
        <operation>notEqual</operation>
        <value>karen schade</value>
    </filters>
    <filters>
        <field>Training_Specialist_Assigned__c</field>
        <operation>notContain</operation>
        <value>lisko,rambo,mejia,nic,nancy</value>
    </filters>
    <label>Gina&apos;s Unassigned Implementations</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>