force-app/main/default/objects/Implementation_Services__c/listViews/All_w_account.listView-meta.xml
<ListView>
    <fullName>All_w_account</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>Implementation_Owner__c</columns>
    <columns>Related_Account__c</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>IST_Status__c</columns>
    <columns>Implementation_Stage__c</columns>
    <columns>Technical_Specialist__c</columns>
    <columns>Training_Specialist_Assigned__c</columns>
    <columns>Implementation_Type__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>