force-app/main/default/objects/Implementation_Services__c/listViews/APAC_All_Open_Implementations.listView-meta.xml
<ListView>
    <fullName>APAC_All_Open_Implementations</fullName>
    <columns>NAME</columns>
    <columns>Implementation_Owner__c</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>IST_Status__c</columns>
    <columns>IST_Completed_Status__c</columns>
    <columns>Implementation_Type__c</columns>
    <columns>Bill_Review_Completed__c</columns>
    <columns>Hand_off_Completed__c</columns>
    <columns>Training_Specialist_Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IST_Completed_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Owner_Region__c</field>
        <operation>equals</operation>
        <value>apac</value>
    </filters>
    <filters>
        <field>Channel__c</field>
        <operation>notEqual</operation>
        <value>Canada</value>
    </filters>
    <label>APAC - All Open Implementations</label>
    <language>en_US</language>
</ListView>